[fix] Fix overflow

--- a/assets/styles/common.scss
+++ b/assets/styles/common.scss
@@ -14,6 +14,8 @@ body {
   background-color: $background;
   color: $text_black;
 
+  overflow: hidden auto;
+
   overscroll-behavior: none;
   -webkit-user-drag: none;
 
